...
    private let containerView = UIView()
    private let closeButton = UIButton()
    
    private let infoLabel: UILabel = {
        let label = UILabel()
        label.font = .systemFont(ofSize: 24)
        label.text = "INFO"
        label.textAlignment = .center
        return label
    }()
    
    private let textInfoLabel: UILabel = {
        let label = UILabel()
...
        containerView.addShadow(cornerRadius: 25 ,offset: CGSize(width: 5, height: 2), color: colorShadow, radius: 1, opacity: 1)
    }
    
    private func setupButton(){
        containerView.addSubview(closeButton)
        closeButton.translatesAutoresizingMaskIntoConstraints = false
        closeButton.setTitle("Hide", for: .normal)
        closeButton.setTitleColor(.black, for: .normal)
        closeButton.layer.cornerRadius = 20
        closeButton.layer.borderWidth = 2
        closeButton.layer.borderColor = UIColor.black.cgColor
        closeButton.addTarget(self, action: #selector(closeWindow), for: .touchUpInside)
    }
...
